--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -235,6 +235,10 @@ Convert texts.
     padding-right: @width-arrow-text-gap;
     vertical-align: middle;
   }
+  // FIXME: Ugly hack. Do this better!
+  .second-line {
+    padding-left: 25px;
+  }
 }
 
 /*
